- Updated navigation - Fixed blog posts. - Fixed subtitle

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://www.soebes.de
 title: SoftwareEntwicklung Beratung Schulung
-subtitle: A blogging framework for hackers.
+subtitle: A coders, hackers heaven.....Hm...I do not think so...
 author: Karl-Heinz Marbaise
 simple_search: http://google.com/search
 description:
