- Changed url of blog.

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://www.soebes.de
+url: http://blog.soebes.de
 title: SoftwareEntwicklung Beratung Schulung
 subtitle: A coders, hackers heaven.....Hm...I do not think so...
 author: Karl-Heinz Marbaise
