--- a/_config.yml
+++ b/_config.yml
@@ -90,11 +90,11 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name: blogsoebes
-disqus_show_comment_count: true
+#disqus_short_name: blogsoebes
+disqus_show_comment_count: false
 
 # Google Analytics
-google_analytics_tracking_id:
+#google_analytics_tracking_id:
 
 # Facebook Like
 facebook_like: false
